tests/NormalTests/paczka1/fuzzy1/38546798.err
Error in line 14: GBWT S225 -3,0
Error in line 18: RMtWbr S225 78,9
Error in line 19: RMtWbr S408 18,6
Error in line 25: GBWT S635 46,0
Error in line 29: GBWT S408 -3,0
Error in line 32: RMtWbr S635 85,w
Error in line 28: s6Y S10 12,2
Error in line 35: EYRCiw Sz0 28,7
Error in line 33: s6Y S225 9,7
Error in line 26: GBWT S408 99,2
